Updated by mdAutofix.py

--- a/help/release-notes/previous-releases/2023.md
+++ b/help/release-notes/previous-releases/2023.md
@@ -73,7 +73,7 @@ Wir entfernen IP-Adressdaten aus unserem langfristigen Speicher, um die Einhaltu
 
 * Ab jetzt werden wir Landes-Code, Stadt-Code und Regions-Code anstelle von Landesname, Stadtname und Regionsname herunterladen.
 * Bei der Verarbeitung aller historischen Web-Aktivitäten kann es zu Inkonsistenzen bei Standortinformationen über verschiedene Einträge hinweg kommen. Diese Inkonsistenzen können das Vorhandensein von IP-Adressen ohne Geolokationsinformationen, aktualisierte Geolokationsinformationen ohne IP-Adressen oder eine Mischung aus Länder- oder Regionennamen und -Codes umfassen.
-* _**Dieser Zeitraum mit gemischten Daten wird voraussichtlich vom 04.01.2023 bis zum 28.02.2023 eintreten.**_
+* _&#x200B;**Dieser Zeitraum mit gemischten Daten wird voraussichtlich vom 04.01.2023 bis zum 28.02.2023 eintreten.**&#x200B;_
 
 **Seitentitel-Daten in URL-Tabelle**
 
@@ -103,7 +103,7 @@ Die Einführung der neuen vordefinierten Dashboards erfolgt schrittweise ab der 
 
 #### Einstellung von Salesforce-Feldern
 
-Wir werden unsere Exportaufträge an Lead-/Kontaktobjekte schrittweise auslaufen lassen, um unsere Integration zu vereinfachen und den Export in Salesforce-Standardobjekte zu vermeiden. Die unten aufgeführten denormalisierten Felder werden ebenfalls nicht mehr unterstützt, da Kundinnen und Kunden dieselben Daten von ihren Touchpoint-Objekten erhalten können. _**Die Timeline für die Einstellung ist Juni 2024.**_
+Wir werden unsere Exportaufträge an Lead-/Kontaktobjekte schrittweise auslaufen lassen, um unsere Integration zu vereinfachen und den Export in Salesforce-Standardobjekte zu vermeiden. Die unten aufgeführten denormalisierten Felder werden ebenfalls nicht mehr unterstützt, da Kundinnen und Kunden dieselben Daten von ihren Touchpoint-Objekten erhalten können. _&#x200B;**Die Timeline für die Einstellung ist Juni 2024.**&#x200B;_
 
 <table style="width:350px">
 <tbody>
